# aula08_boatcamp-python

./: README.md  etl.py  pipeline.py  pyproject.toml
