[tool.poetry]
name = "aula08-boatcamp"
version = "0.1.0"
description = ""
authors = ["YanZN <yanrobim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.5"
pandera = "^0.22.0"
pandas = "^2.2.3"
fastparquet = "^2024.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
